src/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Badge_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge ID</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Badge_Label__c</fullName>
        <label>Badge Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_GN_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is a Guest GN USER . don&apos;t get confused by API Name as Client_GN_User

Buyer_GN_User is accessed by using Order Object, So we do not have that field in Ticket table.</description>
        <label>Guest GN User</label>
        <referenceTo>GN_User__c</referenceTo>
        <relationshipLabel>BLN Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>This is just a place holder for temporarily storing the name when a buyer edits a ticket</description>
        <label>TKT Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>This is just a place holder for temporarily storing the name when a buyer edits a ticket</description>
        <label>TKT First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Desc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Desc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Pool__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Pool</label>
        <referenceTo>Item_Pool__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item Type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>BLN_Item__c</referenceTo>
        <relationshipName>Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>This is just a place holder for temporarily storing the name when a buyer edits a ticket</description>
        <label>TKT Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent ID</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSVP__c</fullName>
        <label>RSVP</label>
        <picklist>
            <picklistValues>
                <fullName>Will Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not yet rsvp&apos;d</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TKT_Job_Title__c</fullName>
        <description>This is just a place holder for temporarily storing the job title when a buyer edits a ticket</description>
        <label>TKT Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_No__c</fullName>
        <description>This field holds either the serial number or complete item location tag number
eg. for a seat it will say zone A, Row 3, Seat 47</description>
        <label>Seat No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Status__c</fullName>
        <label>Ticket Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Reserved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tstatus_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tstatus_Id</label>
        <referenceTo>Tstatus__c</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>badgeparentid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>badgeparentid</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>badgeparentids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>praentidworkflowfill__c</fullName>
        <label>praentidworkflowfill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BLN Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Ticket_Status__c</columns>
        <columns>Event__c</columns>
        <columns>Item_Pool__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Item__c</columns>
        <columns>Parent_ID__c</columns>
        <columns>Badge_Label__c</columns>
        <columns>Tag_No__c</columns>
        <columns>Order__c</columns>
        <columns>Client_Company__c</columns>
        <columns>Client_GN_User__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ticket_Status__c</field>
            <operation>equals</operation>
            <value>Abandoned</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TKT-{000000}</displayFormat>
        <label>Ticket Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>